--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="count">Count:</string>
     <string name="save">Save</string>
     <string name="name">Name:</string>
-    <string name="error_input_count"></string>
-    <string name="error_input_name"></string>
+    <string name="error_input_name">Введите имя</string>
+    <string name="error_input_count">Введите корректное количество</string>
 </resources>
